# infinite-loop

./: .analysis-report.json  .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENGINEERING_BACKLOG.md  HACKING.md  IMPROVEMENT_PLAN.md  Makefile  README.md  REFACTOR_PLAN.md  SECURITY.md  SKILL.md  SYNTHESIS_REPORT.json  audit-frontend.json  bandit-report.json  docker-compose.yml  launch-loop.py  profile-worker-startup-v5.py  profile-worker-startup.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  session-self-loop.py  setup.py
.analysis/: engine-findings.txt  synthesis-output.json  tooling-findings.txt  webapp-findings.txt
.githooks/: README.md  pre-commit
.github/: dependabot.yml
.pi/: hindsight.json  hindsight.json.bak-2026-06-30T02-42-13-527Z  hindsight.json.bak-2026-06-30T02-43-52-222Z
hermes_loop/: __init__.py  __main__.py  archiving.py  cli.py  color_utils.py  completions.py  config.py  cooldown.py  dashboard.py  diagnosis.py  env_utils.py  error_recovery.py  error_utils.py  file_utils.py  file_watcher.py  functions.py  git_utils.py  goal_utils.py  heartbeat.py  hermes_utils.py  iteration.py  legacy.py  library_worker.py  loop.py  notifications.py  preflight.py  self_test.py  signal_handlers.py  similarity.py  state.py  stats.py  system_utils.py  tracker.py  validation.py  webhook.py  wizard.py  worker_manager.py  worktree_merger.py
omp_loop/: __init__.py  __main__.py  cli.py  config.py  config_file.py  engine-findings.txt  env_utils.py  error_recovery.py  error_utils.py  events.py  file_utils.py  file_watcher.py  functions.py  git_utils.py  heartbeat.py  help_topics.py  loop.py  parser.py  status.py  validation.py
pi_loop/: __init__.py  __main__.py  cli.py  config.py  config_file.py  env_utils.py  error_recovery.py  error_utils.py  events.py  file_utils.py  file_watcher.py  functions.py  heartbeat.py  help_topics.py  loop.py  parser.py  preflight.py  state.py  stats.py  status.py  system_utils.py  validation.py
plans/: analysis-pi_loop.state.json
references/: config-requirements.md  cross-iteration-context.md  hermes-delegate-protocol.md  hermes-worker.md  spawn-toolset-restriction.md  stdlib-daemon-patterns.md  terminal-timeout-trap.md  worker-startup-profiling.md  yaml-null-pitfall.md
research/: aiagent-vs-subprocess-analysis.md  automatic-error-recovery.md  concurrent-library-mode.md  config-api-notifications.md  dashboard-v3-sse-implementation.md  dashboard-v3-sse.md  function-decomposition.md  ledger-archiving.md  multi-profile-goals.md  session-self-healing-implementation.md  session-self-healing.md  v0.17-enhancements.md  v11.11.0-features.md  v11.12.0-features.md  v11.13.0-features.md  v11.14.0-features.md  v12.0.0-features.md  v13.0.0-features.md  v13.1.0-audit.md  v13.1.0-features.md  v13.1.0-synthesis.md  v14.0.0-features.md  v14.0.0-novel-findings.md  v14.1.0-features.md  v14.1.0-status-update.md  worker-startup-profile-v4.md  worker-startup-profile-v5.md
scripts/: archive-state.sh  inspect-ledger.sh  replay-ledger.sh  run-loop.sh  verify-delegation-config.sh
tests/: conftest.py  test_auth.py  test_cli.py  test_color_utils.py  test_config.py  test_config_file.py  test_config_manager.py  test_cooldown.py  test_dashboard.py  test_diagnosis.py  test_env_utils.py  test_error_recovery.py  test_error_utils.py  test_file_utils.py  test_file_watcher.py  test_functions.py  test_git_utils.py  test_goal_utils.py  test_healthcheck.py  test_heartbeat.py  test_help_topics.py  test_hermes_utils.py  test_integration.py  test_integration_deep.py  test_integration_gaps.py  test_integration_remaining.py  test_iteration.py  test_library_worker.py  test_loop.py  test_loop_manager.py  test_loop_run.py  test_notifications.py  test_pi_smoke.py  test_preflight.py  test_runtime_guard.py  (+14 more)
(+16 files in other folders)
