[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-loop"
description = "Autonomous task automation daemon — watches files, runs tasks, tracks progress in a JSON ledger"
version = "14.39.0"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ['fastapi>=0.100.0', 'uvicorn[standard]>=0.20.0']

[project.scripts]
pi-loop = "pi_loop.cli:main"
pi-loop-web = "web_app.__main__:main"

[tool.setuptools.packages.find]
include = ["pi_loop*", "web_app*"]
