[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-loop"
description = "Autonomous task automation daemon — watches files, runs tasks, tracks progress in a JSON ledger"
version = "14.39.0"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ['fastapi>=0.100.0', 'uvicorn[standard]>=0.20.0']

[project.scripts]
pi-loop = "pi_loop.cli:main"
pi-loop-web = "web_app.__main__:main"

[tool.setuptools.packages.find]
include = ["pi_loop*", "web_app*"]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0",
  "pytest-timeout>=2.0",
  "httpx2>=0.2.0",
]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.8.0",
  "pip-tools>=7.0.0",
  "pre-commit>=3.0.0",
  "bandit>=1.7.0",
  "safety>=3.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# Rule codes:
#   E = pycodestyle errors      F = pyflakes         W = pycodestyle warnings
#   I = isort (import order)     N = pep8-naming      UP = pyupgrade
#   B = flake8-bugbear           SIM = flake8-simplify ARG = flake8-unused-arguments
#   RUF100 = unused noqa         C4 = flake8-comprehensions
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "RUF100", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
targets = ["pi_loop/", "web_app/"]
skips = ["B101"]
confidence = "high"

[tool.coverage.run]
source = ["pi_loop", "web_app"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
fail_under = 65
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.:",
  "raise AssertionError",
  "raise NotImplementedError",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v --tb=short --timeout=120"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["smoke: marks smoke tests that need external tools like pi"]
